load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/kleinpa/rcn-merlin-exporter
gazelle(name = "gazelle")

go_library(
    name = "rcn-merlin-exporter",
    srcs = [
        "merlin.go",
        "merlin_collector.go",
    ],
    importpath = "github.com/kleinpa/rcn-merlin-exporter",
    visibility = ["//visibility:public"],
    deps = ["@com_github_prometheus_client_golang//prometheus"],
)
