load("@rules_go//go:def.bzl", "go_library")
load("@gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")

go_library(
    name = "rcn-merlin-exporter",
    srcs = [
        "merlin.go",
        "merlin_collector.go",
    ],
    importpath = "github.com/kleinpa/rcn-merlin-exporter",
    visibility = ["//visibility:public"],
    deps = ["@com_github_prometheus_client_golang//prometheus"],
)
