module(name = "rcn_merlin_exporter", version = "1.0")

bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "rcn_merlin_exporter_distroless_base",
    digest = "sha256:5c21e542a03a94d9598ddf9a985c790fd574171610c1b87d464a294b305bca2a",
    image = "gcr.io/distroless/cc",
    platforms = ["linux/amd64"],
)
use_repo(oci, "rcn_merlin_exporter_distroless_base", "rcn_merlin_exporter_distroless_base_linux_amd64")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_prometheus_client_golang",
)
