load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "merlin_exporter_lib",
    srcs = ["main.go"],
    importpath = "github.com/kleinpa/rcn-merlin-exporter/cmd/merlin_exporter",
    visibility = ["//visibility:private"],
    deps = [
        "//:rcn-merlin-exporter",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
    ],
)

go_binary(
    name = "merlin_exporter",
    embed = [":merlin_exporter_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tar",
    srcs = [":merlin_exporter"],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/merlin_exporter"],
    tars = [":tar"],
)

oci_push(
    name = "image_push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "ghcr.io/kleinpa/rcn-merlin-exporter",
)

build_test(
    name = "build_test",
    targets = [
        ":merlin_exporter",
    ],
)
